Implement leaderboard & change swagger-ui theme
